Fix for the un-expand issue on firefox

--- a/web-app/css/general.css
+++ b/web-app/css/general.css
@@ -981,7 +981,6 @@ div.allwhite {
 }
 
 .resultsHeaderBackground .facetedSearchResultBody {
-    height: 100px;
     overflow-y: hidden;
 }
 
